ported quilt code to bring fabric in parity